<resources>
    <string name="app_name">Simple ToDo</string>
    <string name="enterToDo">Enter ToDo</string>
    <string name="enterDetailsToDo">Enter details</string>
    <string name="donePrefix">Done: </string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="endOfList">End of List</string>
    <string name="noToDosAddOne">There are not ToDos, add one with the button below</string>
    <string name="isDoneChecked">Is Done Checked</string>
</resources>